--- a/cvb/tegra234-p3737-0000-a00.dtsi
+++ b/cvb/tegra234-p3737-0000-a00.dtsi
@@ -61,6 +61,16 @@
 		};
 	};
 
+	sdhci@3400000 {
+		disable-wp;
+		no-sdio;
+		nvidia,cd-wakeup-capable;
+		no-mmc;
+		nvidia,boot-detect-delay = <1000>;
+		cd-gpios = <&tegra_main_gpio TEGRA234_MAIN_GPIO(G, 7) 0>;
+		status = "okay";
+	};
+
 	i2c@c240000 {
 		ucsi_ccg: ucsi_ccg@8 {
 #if TEGRA_XUSB_DT_VERSION >= DT_VERSION_3
