t23x: concord: add display DCB blob
This change adds Display DCB blob to Concord device
tree. Display DCB blob holds configuration for DP and
DP++ outputs on Concord.

JIRA TDS-8257

Change-Id: I56e7521b0c0819966f2c96659d573612f6f0bac6
Signed-off-by: Naveen Kumar S <nkumars@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/device/hardware/nvidia/platform/t23x/concord-dts/+/2558369
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>
Reviewed-by: svcacv <svcacv@nvidia.com>
Reviewed-by: Shu Zhong <shuz@nvidia.com>
Reviewed-by: Bibek Basu <bbasu@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
GVS: Gerrit_Virtual_Submit

--- a/tegra234-p3701-0000-p3737-0000.dts
+++ b/tegra234-p3701-0000-p3737-0000.dts
@@ -17,10 +17,15 @@
 #include "cvm/tegra234-p3701-0000.dtsi"
 #include "cvb/tegra234-p3737-0000-a00.dtsi"
 #include "tegra234-power-tree-p3701-0000-p3737-0000.dtsi"
+#include "tegra234-dcb-p3701-0000-a02-p3737-0000-a01.dtsi"
 
 / {
 	nvidia,dtsfilename = __FILE__;
 	nvidia,dtbbuildtime = __DATE__, __TIME__;
 
 	compatible = "nvidia,p3737-0000+p3701-0000", "nvidia,tegra23x";
+
+	display@13800000 {
+		status = "okay";
+	};
 };
