--- a/kernel-dts/tegra234-soc/tegra234-soc-pcie-fpga.dtsi
+++ b/kernel-dts/tegra234-soc/tegra234-soc-pcie-fpga.dtsi
@@ -75,9 +75,13 @@
 #if TEGRA_IOMMU_DT_VERSION >= DT_VERSION_2
 		iommus = <&smmu_niso1 TEGRA_SID_NISO1_PCIE1>;
 		iommu-map = <0x0 &smmu_niso1 TEGRA_SID_NISO1_PCIE1 0x1000>;
+		msi-parent = <&gic_v2m TEGRA_SID_NISO1_PCIE1>;
+		msi-map = <0x0 &gic_v2m TEGRA_SID_NISO1_PCIE1 0x1000>;
 #else
 		iommus = <&smmu TEGRA_SID_PCIE1>;
 		iommu-map = <0x0 &smmu TEGRA_SID_PCIE1 0x1000>;
+		msi-parent = <&gic_v2m TEGRA_SID_PCIE1>;
+		msi-map = <0x0 &gic_v2m TEGRA_SID_PCIE1 0x1000>;
 #endif
 		dma-coherent;
 		iommu-map-mask = <0x0>;
