--- a/kernel-dts/tegra234-soc/tegra234-soc-pcie.dtsi
+++ b/kernel-dts/tegra234-soc/tegra234-soc-pcie.dtsi
@@ -406,9 +406,13 @@
 #if TEGRA_IOMMU_DT_VERSION >= DT_VERSION_2
 		iommus = <&smmu_niso0 TEGRA_SID_NISO0_PCIE5>;
 		iommu-map = <0x0 &smmu_niso0 TEGRA_SID_NISO0_PCIE5 0x1000>;
+		msi-parent = <&gic_v2m TEGRA_SID_NISO0_PCIE5>;
+		msi-map = <0x0 &gic_v2m TEGRA_SID_NISO0_PCIE5 0x1000>;
 #else
 		iommus = <&smmu TEGRA_SID_PCIE5>;
 		iommu-map = <0x0 &smmu TEGRA_SID_PCIE5 0x1000>;
+		msi-parent = <&gic_v2m TEGRA_SID_PCIE5>;
+		msi-map = <0x0 &gic_v2m TEGRA_SID_PCIE5 0x1000>;
 #endif
 		dma-coherent;
 		iommu-map-mask = <0x0>;
@@ -480,9 +484,13 @@
 #if TEGRA_IOMMU_DT_VERSION >= DT_VERSION_2
 		iommus = <&smmu_niso0 TEGRA_SID_NISO0_PCIE6>;
 		iommu-map = <0x0 &smmu_niso0 TEGRA_SID_NISO0_PCIE6 0x1000>;
+		msi-parent = <&gic_v2m TEGRA_SID_NISO0_PCIE6>;
+		msi-map = <0x0 &gic_v2m TEGRA_SID_NISO0_PCIE6 0x1000>;
 #else
 		iommus = <&smmu TEGRA_SID_PCIE6>;
 		iommu-map = <0x0 &smmu TEGRA_SID_PCIE6 0x1000>;
+		msi-parent = <&gic_v2m TEGRA_SID_PCIE6>;
+		msi-map = <0x0 &gic_v2m TEGRA_SID_PCIE6 0x1000>;
 #endif
 		dma-coherent;
 		iommu-map-mask = <0x0>;
@@ -554,9 +562,13 @@
 #if TEGRA_IOMMU_DT_VERSION >= DT_VERSION_2
 		iommus = <&smmu_niso1 TEGRA_SID_NISO1_PCIE7>;
 		iommu-map = <0x0 &smmu_niso1 TEGRA_SID_NISO1_PCIE7 0x1000>;
+		msi-parent = <&gic_v2m TEGRA_SID_NISO1_PCIE7>;
+		msi-map = <0x0 &gic_v2m TEGRA_SID_NISO1_PCIE7 0x1000>;
 #else
 		iommus = <&smmu TEGRA_SID_PCIE7>;
 		iommu-map = <0x0 &smmu TEGRA_SID_PCIE7 0x1000>;
+		msi-parent = <&gic_v2m TEGRA_SID_PCIE7>;
+		msi-map = <0x0 &gic_v2m TEGRA_SID_PCIE7 0x1000>;
 #endif
 		dma-coherent;
 		iommu-map-mask = <0x0>;
@@ -628,9 +640,13 @@
 #if TEGRA_IOMMU_DT_VERSION >= DT_VERSION_2
 		iommus = <&smmu_niso1 TEGRA_SID_NISO1_PCIE10>;
 		iommu-map = <0x0 &smmu_niso1 TEGRA_SID_NISO1_PCIE10 0x1000>;
+		msi-parent = <&gic_v2m TEGRA_SID_NISO1_PCIE10>;
+		msi-map = <0x0 &gic_v2m TEGRA_SID_NISO1_PCIE10 0x1000>;
 #else
 		iommus = <&smmu TEGRA_SID_PCIE10>;
 		iommu-map = <0x0 &smmu TEGRA_SID_PCIE10 0x1000>;
+		msi-parent = <&gic_v2m TEGRA_SID_PCIE10>;
+		msi-map = <0x0 &gic_v2m TEGRA_SID_PCIE10 0x1000>;
 #endif
 		dma-coherent;
 		iommu-map-mask = <0x0>;
