tegra: fsicom: add client driver
- add FSICOM client driver, NvFsi daemon will be communicating
  with FSICOM client driver for utilizing the smmu and hsp mailbox
  comm. using ioctl call.
- add support for TOP2 hsp mail box for communication
with FSI using ioctl call
- implement kernel to user space application signal mechanism
for sending the notificatiion back to NvFsi daemon

Jira SS-2492

Change-Id: I6020c6df490cea0a4dac9a54330fae34b9a96793
Signed-off-by: pshaw <pshaw@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/linux-nvidia/+/2558768
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>

--- a/drivers/platform/tegra/Makefile
+++ b/drivers/platform/tegra/Makefile
@@ -107,3 +107,4 @@ obj-$(CONFIG_TEGRA_WDT_RECOVERY)        += wdt-recovery.o
 obj-y					+= tegra_prod.o
 obj-m 					+= bad.o
 obj-$(CONFIG_TEGRA_CLOCKS_CONFIGURE)	+= clocks-config.o
+obj-$(CONFIG_TEGRA_FSICOM)		+= tegra-fsicom.o
