--- a/bct/scr/tegra194-mb1-bct-scr-cbb-mini-spi1-to-tz.cfg
+++ b/bct/scr/tegra194-mb1-bct-scr-cbb-mini-spi1-to-tz.cfg
@@ -12,7 +12,7 @@
 scr.major = 1;
 scr.minor = 0;
 
-# Chip version = 96;
+# Chip version = 97;
 # Platform version = 0;
 # Project version = 6;
 # SCR Section
@@ -660,7 +660,7 @@ scr.640.4 = 0x39000202; # GPCDMA_SCR_SCR_CH6_0
 scr.641.4 = 0x39000202; # GPCDMA_SCR_SCR_CH7_0
 scr.642.4 = 0x39000202; # GPCDMA_SCR_SCR_CH8_0
 scr.643.4 = 0x39000202; # GPCDMA_SCR_SCR_CH9_0
-scr.644.4 = 0x1800ffff; # GPCDMA_SCR_SCR_DMA_RO_0
+scr.644.4 = 0x38000000; # GPCDMA_SCR_SCR_DMA_RO_0
 scr.645.4 = 0x39000202; # GPCDMA_SCR_SCR_HYPER_0
 scr.646.4 = 0x3d002020; # GPCDMA_SCR_SCR_SAFETY_0
 scr.647.5 = 0x00000000; # GPCDMA_SCR_SCR_TZ_0
@@ -2512,7 +2512,7 @@ scr.2491.4 = 0x3a0024ff; # CBB_CENTRAL_NOC_ERR_COLLATOR_5_CAR_BLF_CONTROL_REGIST
 scr.2492.4 = 0x3a0024ff; # CBB_CENTRAL_NOC_ERR_COLLATOR_6_CAR_BLF_CONTROL_REGISTER_0
 scr.2493.4 = 0x3a0024ff; # CBB_CENTRAL_NOC_ERR_COLLATOR_9_CAR_BLF_CONTROL_REGISTER_0
 scr.2494.4 = 0x380046ff; # CBB_CENTRAL_NOC_FUSE_BLF_CONTROL_REGISTER_0
-scr.2495.4 = 0x1800ffff; # CBB_CENTRAL_NOC_GPCDMA_BLF_CONTROL_REGISTER_0
+scr.2495.4 = 0x38002323; # CBB_CENTRAL_NOC_GPCDMA_BLF_CONTROL_REGISTER_0
 scr.2496.4 = 0x3a0004ff; # CBB_CENTRAL_NOC_HOST1X_CAR_BLF_CONTROL_REGISTER_0
 scr.2497.4 = 0x3a0004ff; # CBB_CENTRAL_NOC_I2C_SLOW_CAR_BLF_CONTROL_REGISTER_0
 scr.2498.13 = 0x00000000; # CBB_CENTRAL_NOC_IST_BLF_CONTROL_REGISTER_0
