soc: t23x: Add iommu resv region for audio
iommu reserved region is still valid for t23x platforms. There
is no change compared to t19x platforms on this property, so
retaining same entry for t23x.

Bug 200742155
Bug 200744884
Bug 200742154

Change-Id: I88139283ccc71f6803b482e08449ccba005064de
Signed-off-by: Mohan Kumar <mkumard@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/device/hardware/nvidia/soc/t23x/+/2558993
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>

--- a/kernel-dts/tegra234-soc/tegra234-soc-audio.dtsi
+++ b/kernel-dts/tegra234-soc/tegra234-soc-audio.dtsi
@@ -23,6 +23,7 @@
 #else
 		iommus = <&smmu TEGRA_SID_APE>;
 #endif
+		iommu-resv-regions = <0x0 0x0 0x0 0x40000000 0x0 0x60000000 0xffffffff 0xffffffff>;
 		status = "disabled";
 	};
 
@@ -32,6 +33,7 @@
 #else
 		iommus = <&smmu TEGRA_SID_APE>;
 #endif
+		iommu-resv-regions = <0x0 0x0 0x0 0x40000000 0x0 0x60000000 0xffffffff 0xffffffff>;
 		status = "disabled";
 	};
 
@@ -138,6 +140,7 @@
 #else
 			iommus = <&smmu TEGRA_SID_APE>;
 #endif
+			iommu-resv-regions = <0x0 0x0 0x0 0x40000000 0x0 0x60000000 0xffffffff 0xffffffff>;
 			status = "disabled";
 		};
 
@@ -703,6 +706,7 @@
 #else
 			iommus = <&smmu TEGRA_SID_APE>;
 #endif
+			iommu-resv-regions = <0x0 0x0 0x0 0x40000000 0x0 0x60000000 0xffffffff 0xffffffff>;
 			interrupt-parent = <&tegra_agic>;
 			interrupts = <GIC_SPI INT_ADMA_EOT16 IRQ_TYPE_LEVEL_HIGH
 					ROUTE_TO_ADSP>,
