t23x: common: enable tegra rtc for concord
Enable support for Tegra RTC on Concord by enabling
the DT for Concord CVM 3701.

Bug 200733771

Change-Id: I9caf748813f537f4e73fb00ef64a4dcbab67ea1a
Signed-off-by: kartik <kkartik@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/device/hardware/nvidia/platform/t23x/common-dts/+/2559576
Reviewed-by: svcacv <svcacv@nvidia.com>
Reviewed-by: svc_kernel_abi <svc_kernel_abi@nvidia.com>
Reviewed-by: Jeetesh Burman <jburman@nvidia.com>
Reviewed-by: Bitan Biswas <bbiswas@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
GVS: Gerrit_Virtual_Submit
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>

--- a/t234-common-cvm/tegra234-cvm-p3701.dtsi
+++ b/t234-common-cvm/tegra234-cvm-p3701.dtsi
@@ -167,6 +167,10 @@
 		status = "okay";
 	};
 
+	rtc@c2a0000 {
+		status = "okay";
+	};
+
 	pmc@c360000 {
 #if TEGRA_PMC_VERSION >= DT_VERSION_2
 		nvidia,invert-interrupt;
