t23x: common: enable efuse and efuse-burn nodes
Enable support for tegra fuse and fuse-burn driver on Concord
platform by enabling following DT nodes for Concord CVM 3701.
- efuse
- efuse-burn

Bug 200733771

Change-Id: I558cdaa1f7bdf4ac19c81af76e2a362072c46922
Signed-off-by: kartik <kkartik@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/device/hardware/nvidia/platform/t23x/common-dts/+/2559577
Reviewed-by: svcacv <svcacv@nvidia.com>
Reviewed-by: svc_kernel_abi <svc_kernel_abi@nvidia.com>
Reviewed-by: Jeetesh Burman <jburman@nvidia.com>
Reviewed-by: Bitan Biswas <bbiswas@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
GVS: Gerrit_Virtual_Submit
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>

--- a/t234-common-cvm/tegra234-cvm-p3701.dtsi
+++ b/t234-common-cvm/tegra234-cvm-p3701.dtsi
@@ -167,6 +167,14 @@
 		status = "okay";
 	};
 
+	efuse@3810000 {
+		status = "okay";
+	};
+
+	efuse-burn {
+		status = "okay";
+	};
+
 	rtc@c2a0000 {
 		status = "okay";
 	};
