tegra: t234: hwpm: enable hwpm driver build
Set kconfig for TEGRA_SOC_HWPM to y and enable
hwpm driver build for nvidia internal build variant.

Bug 3341154

Change-Id: Id2a4968925636d2a8ed8735023ab0839b780adfe
Signed-off-by: Seshendra Gadagottu <sgadagottu@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/linux-nvidia/+/2559681
Reviewed-by: svcacv <svcacv@nvidia.com>
Reviewed-by: svc_kernel_abi <svc_kernel_abi@nvidia.com>
Reviewed-by: Seema Khowala <seemaj@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
GVS: Gerrit_Virtual_Submit
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>

--- a/drivers/platform/tegra/Kconfig
+++ b/drivers/platform/tegra/Kconfig
@@ -172,7 +172,7 @@ config TEGRA_SAFETY_SCE
 config TEGRA_SOC_HWPM
 	bool "Tegra SOC HWPM driver"
 	depends on ARCH_TEGRA_23x_SOC
-	default n
+	default y
 	help
 	  The SOC HWPM driver enables performance monitoring for various Tegra
 	  IPs.
