--- a/t234-common-cvb/tegra234-p3711-fixed-regulator.dtsi
+++ b/t234-common-cvb/tegra234-p3711-fixed-regulator.dtsi
@@ -89,6 +89,8 @@
 			regulator-min-microvolt = <3300000>;
 			regulator-max-microvolt = <3300000>;
 			vin-supply = <&p3711_vdd_mv_cvm>;
+			/* DP GMSL power down GPIO */
+			gpio = <&tegra_main_gpio TEGRA234_MAIN_GPIO(G, 3) GPIO_ACTIVE_HIGH>;
 		};
 
 		p3711_vdd_1v8_cvb: regulator@110 {
