--- a/kernel-dts/tegra234-soc/tegra234-soc-uart.dtsi
+++ b/kernel-dts/tegra234-soc/tegra234-soc-uart.dtsi
@@ -155,6 +155,22 @@
 		status = "disabled";
 	};
 
+	uarti: serial@31d0000 {
+		compatible = "arm,sbsa-uart";
+		reg = <0x0 0x31d0000 0x0 0x10000>;
+		interrupts = <0x0 TEGRA234_IRQ_UARTI 0x04>;
+		current-speed = <115200>;
+		status = "disabled";
+	};
+
+	uartj: serial@c270000 {
+		compatible = "arm,sbsa-uart";
+		reg = <0x0 0xc270000 0x0 0x10000>;
+		interrupts = <0x0 TEGRA234_IRQ_UARTJ 0x04>;
+		current-speed = <115200>;
+		status = "disabled";
+	};
+
 	combined-uart {
 		compatible = "nvidia,tegra186-combined-uart";
 		reg = <0x0 0x3c10000 0x0 0x4   /* TOP0_HSP_SM_0_1_BASE */
