t23x: status property update for host1x & engines
Host1x and supported engines are enabled by default
in tegra234-soc-host1x.dtsi (included in base DT).
And they are disabled in tegra234-soc-virt.dtsi
so that they can be enabled in the wrapper DTs based on
the virtualization need.

tegra234-soc-fpga.dtsi and tegra234-soc-sim.dtsi are
updated accordingly by considering the respective platform.

Jira HOSTX-2979
Jira HOSTX-2980

Change-Id: I2dc2c4b7e7ff6113181661f34ec38397f12914ee
Reviewed-on: https://git-master.nvidia.com/r/c/device/hardware/nvidia/soc/t23x/+/2560133
Reviewed-by: svcacv <svcacv@nvidia.com>
Reviewed-by: Haley Teng <hteng@nvidia.com>
Reviewed-by: Jinyoung Park <jinyoungp@nvidia.com>
Reviewed-by: Arto Merilainen <amerilainen@nvidia.com>
Reviewed-by: Mikko Perttunen <mperttunen@nvidia.com>
Reviewed-by: Santosh BS <santoshb@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
GVS: Gerrit_Virtual_Submit
Tested-by: Santosh BS <santoshb@nvidia.com>
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>

--- a/kernel-dts/tegra234-soc/tegra234-soc-fpga.dtsi
+++ b/kernel-dts/tegra234-soc/tegra234-soc-fpga.dtsi
@@ -230,20 +230,69 @@
 	};
 
 	host1x: host1x@13e00000 {
-		tsec@15500000 {
-			status = "okay";
+
+		vic@15340000 {
+			status = "disabled";
 		};
 
-		se@15810000 {
-			status = "okay";
+		nvjpg@15380000 {
+			status = "disabled";
 		};
 
-		se@15820000 {
-			status = "okay";
+		nvjpg1@15540000 {
+			status = "disabled";
 		};
 
-		se@15840000 {
-			status = "okay";
+		nvdec@15480000 {
+			status = "disabled";
+		};
+
+		nvenc@154c0000 {
+			status = "disabled";
+		};
+
+		ofa@15a50000 {
+			status = "disabled";
+		};
+
+		vi0@15c00000 {
+			status = "disabled";
+		};
+
+		vi0-thi@15f00000 {
+			status = "disabled";
+		};
+
+		vi1@14c00000 {
+			status = "disabled";
+		};
+
+		vi1-thi@14f00000 {
+			status = "disabled";
+		};
+
+		isp@14800000 {
+			status = "disabled";
+		};
+
+		isp-thi@14b00000 {
+			status = "disabled";
+		};
+
+		nvcsi@15a00000 {
+			status = "disabled";
+		};
+
+		pva0 {
+			status = "disabled";
+		};
+
+		nvdla0@15880000 {
+			status = "disabled";
+		};
+
+		nvdla1@158c0000 {
+			status = "disabled";
 		};
 	};
 
