t23x: P3711: Add ethernet node for P3711
Add ethernet EQOS node for P3711

Bug 200745824

Change-Id: I4b9c7844b3322329b66b4062585ce70e96b39a13
Signed-off-by: Narayan Reddy <narayanr@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/device/hardware/nvidia/platform/t23x/common-dts/+/2560218
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>
Reviewed-by: svcacv <svcacv@nvidia.com>
Reviewed-by: svc_kernel_abi <svc_kernel_abi@nvidia.com>
Reviewed-by: Sandipan Patra <spatra@nvidia.com>
Reviewed-by: Bhadram Varka <vbhadram@nvidia.com>
Reviewed-by: Bitan Biswas <bbiswas@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
GVS: Gerrit_Virtual_Submit

--- a/t234-common-cvb/tegra234-p3711-common.dtsi
+++ b/t234-common-cvb/tegra234-p3711-common.dtsi
@@ -18,6 +18,7 @@
 #include <t234-common-cvb/tegra234-p3711-eeprom.dtsi>
 #include <t234-common-cvb/tegra234-p3711-display.dtsi>
 #include <t234-common-cvb/tegra234-p3711-pcie.dtsi>
+#include <t234-common-cvb/tegra234-p3711-ethernet.dtsi>
 
 / {
 	gpio-keys {
