--- a/drivers/platform/tegra/Kconfig
+++ b/drivers/platform/tegra/Kconfig
@@ -65,6 +65,11 @@ config TEGRA_CAMERA_HSP_MBOX_CLIENT
 	depends on TEGRA_CAMERA_RTCPU && ARCH_TEGRA_186_SOC && MAILBOX
 	default n
 
+config TEGRA_FSICOM
+	bool "Enable Tegra FSICOM client driver"
+	depends on ARCH_TEGRA_23x_SOC && MAILBOX
+	default n
+
 config TEGRA_DCE
 	bool "Tegra DCE driver"
 	depends on ARCH_TEGRA_23x_SOC
