--- a/cvb/tegra234-p3737-fixed-regulator.dtsi
+++ b/cvb/tegra234-p3737-fixed-regulator.dtsi
@@ -138,5 +138,14 @@
 			regulator-max-microvolt = <300000>;
 			vin-supply = <&p3737_vdd_5v_sys>;
 		};
+		p3737_vdd_12v_pcie: regulator@114 {
+			compatible = "regulator-fixed";
+			reg = <114>;
+			regulator-name = "vdd-12v-pcie";
+			regulator-min-microvolt = <12000000>;
+			regulator-max-microvolt = <12000000>;
+			gpio = <&tegra_main_gpio TEGRA234_MAIN_GPIO(A, 1) 1>;
+			enable-active-low;
+		};
 	};
 };
