t23x: common: Update PCIe P2U phandle
PCIe P2U phandles are updated to match with Tegra194 in SoC DT file,
update PCIe P2U phandle in platform DT.

Bug 200752683

Change-Id: I19ee06f4e2b1ba56d3460f5e1761d970c0b766b5
Signed-off-by: Manikanta Maddireddy <mmaddireddy@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/device/hardware/nvidia/platform/t23x/common-dts/+/2560849
Reviewed-by: svcacv <svcacv@nvidia.com>
Reviewed-by: Vidya Sagar <vidyas@nvidia.com>
Reviewed-by: Bibek Basu <bbasu@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>
GVS: Gerrit_Virtual_Submit

--- a/t234-common-cvb/tegra234-p3711-pcie.dtsi
+++ b/t234-common-cvb/tegra234-p3711-pcie.dtsi
@@ -16,7 +16,7 @@
 	pcie@14100000 {
 		status = "okay";
 
-		phys = <&hsio_p2u_3>;
+		phys = <&p2u_hsio_3>;
 		phy-names = "p2u-0";
 	};
 
@@ -24,8 +24,8 @@
 	pcie@14160000 {
 		status = "disabled";
 
-		phys = <&hsio_p2u_4>, <&hsio_p2u_5>, <&hsio_p2u_6>,
-		       <&hsio_p2u_7>;
+		phys = <&p2u_hsio_4>, <&p2u_hsio_5>, <&p2u_hsio_6>,
+		       <&p2u_hsio_7>;
 		phy-names = "p2u-0", "p2u-1", "p2u-2", "p2u-3";
 	};
 
@@ -37,9 +37,9 @@
 	pcie@141a0000 {
 		status = "disabled";
 
-		phys = <&nvhs_p2u_0>, <&nvhs_p2u_1>, <&nvhs_p2u_2>,
-		       <&nvhs_p2u_3>, <&nvhs_p2u_4>, <&nvhs_p2u_5>,
-		       <&nvhs_p2u_6>, <&nvhs_p2u_7>;
+		phys = <&p2u_nvhs_0>, <&p2u_nvhs_1>, <&p2u_nvhs_2>,
+		       <&p2u_nvhs_3>, <&p2u_nvhs_4>, <&p2u_nvhs_5>,
+		       <&p2u_nvhs_6>, <&p2u_nvhs_7>;
 		phy-names = "p2u-0", "p2u-1", "p2u-2", "p2u-3",
 			    "p2u-4", "p2u-5", "p2u-6", "p2u-7";
 	};
