t23x: concord: Add vdd_sys_en regulator for camera
Add vdd_sys_en regulator support for camera

Jira CO-3091

Change-Id: I366adb4ee76ccb6b045b117c5429b7183aed6a54
Reviewed-on: https://git-master.nvidia.com/r/c/device/hardware/nvidia/platform/t23x/concord-dts/+/2562625
Reviewed-by: svcacv <svcacv@nvidia.com>
Reviewed-by: Frank Chen <frankc@nvidia.com>
Reviewed-by: Ankur Pawar <ankurp@nvidia.com>
Reviewed-by: Vincent Chung <vincentc@nvidia.com>
Reviewed-by: Ian Kaszubski <ikaszubski@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
GVS: Gerrit_Virtual_Submit
Tested-by: Frank Chen <frankc@nvidia.com>
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>

--- a/cvb/tegra234-p3737-fixed-regulator.dtsi
+++ b/cvb/tegra234-p3737-fixed-regulator.dtsi
@@ -147,5 +147,14 @@
 			gpio = <&tegra_main_gpio TEGRA234_MAIN_GPIO(A, 1) 1>;
 			enable-active-low;
 		};
+		p3737_vdd_sys_en: regulator@115 {
+			compatible = "regulator-fixed";
+			reg = <115>;
+			regulator-name = "vdd_sys_en";
+			regulator-min-microvolt = <1200000>;
+			regulator-max-microvolt = <1200000>;
+			gpio = <&tegra_main_gpio TEGRA234_MAIN_GPIO(AC, 7) 0>;
+			enable-active-high;
+		};
 	};
 };
