video: tegra: host: Store firmware sizes for RISCV
This patch has below changes:
- To store the code and data sizes from RISC-V desc binary
- nvhost support for VIC booting

Jira HOSTX-2883
Bug 3301326

Change-Id: I39b577c6d446b8594c876fe2fc794f085199a6ac
Signed-off-by: Santosh B S <santoshb@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/linux-nvidia/+/2563384
Reviewed-by: Mikko Perttunen <mperttunen@nvidia.com>
Reviewed-by: svcacv <svcacv@nvidia.com>
Reviewed-by: svc_kernel_abi <svc_kernel_abi@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
GVS: Gerrit_Virtual_Submit
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>

--- a/drivers/video/tegra/host/Makefile
+++ b/drivers/video/tegra/host/Makefile
@@ -44,6 +44,10 @@ nvhost-$(CONFIG_TEGRA_GRHOST_OFA) += ofa/ofa.o
 nvhost-$(CONFIG_TEGRA_GRHOST_NVDEC) += nvdec/nvdec.o nvdec/nvdec_t23x.o
 nvhost-$(CONFIG_TEGRA_GRHOST_TSEC) += tsec/tsec.o tsec/tsec_t23x.o
 
+ifeq ($(CONFIG_TEGRA_T239_GRHOST),y)
+nvhost-$(CONFIG_TEGRA_GRHOST_VIC) += vic/vic_t239.o
+endif
+
 nvhost-$(CONFIG_TEGRA_GRHOST_LEGACY_PD) += nvhost_pd.o
 ifeq ($(CONFIG_SYNC),y)
 nvhost-$(CONFIG_TEGRA_GRHOST_SYNC) += nvhost_sync.o
